<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ISCamera</string>
    <string name="title_activity_camera">Instance Search</string>
    <string name="imageview_desc">Query image</string>
    <string name="selected_imageview_desc">Selected Image</string>
    <string name="none"></string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading&#8230; Please wait!</string>
    <string name="uit_server">UIT Image Retrieval System</string>
    <string name="google_server">Google Image Annotation</string>
    <string name="title_activity_google_vision_result">GoogleVisionResultActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_test_tab">TestTabActivity</string>
    <string name="landmark_detection">Landmark Detection</string>
    <string name="label_detection">Label Detection</string>
    <string name="text_detection">Text Detection</string>
    <string name="safesearch_detection">Safe Search</string>
    <string name="face_detection">Face Detection</string>
    <string name="logo_detection">Logo Detection</string>
    
    <string name="likelihood_joy">Joy</string>
    <string name="likelihood_sorrow">Sorrow</string>
    <string name="likelihood_anger">Anger</string>
    <string name="likelihood_surprise">Surprise</string>
    <string name="likelihood_exposed">Exposed</string>
    <string name="likelihood_blurred">Blurred</string>
    <string name="likelihood_headwear">Headwear</string>
    <string name="face_roll">Roll:</string>
    <string name="face_tilt">Tilt:</string>
    <string name="face_pan">Pan:</string>
    <string name="detect_confidence">Detection Confidence</string>
    <string name="landmarking_confidence">Landmarking Confidence</string>

    <string name="safesearch_adult">Adult</string>
    <string name="safesearch_violence">Violence</string>
    <string name="safesearch_medical">Medical</string>
    <string name="safesearch_spoof">Proof</string>

</resources>
